# GreateAkihabra_9_AMDOpenRoboticsHackathon

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: okite.mdc
mission1/code/training/: training-models-on-rocm.ipynb
mission1/wandb/latest-run/: run-i44p8ftn.wandb
mission1/wandb/run-20251205_131040-i44p8ftn/files/: wandb-metadata.json  wandb-summary.json
mission1/wandb/wandb/latest-run/files/: config.yaml
mission1/wandb/wandb/run-20251205_131040-i44p8ftn/files/: requirements.txt
mission2/code/: README.md
mission2/code/doughnuts_order_assistant/: README.md  pyproject.toml
mission2/code/doughnuts_order_assistant/api/: __init__.py  app.py  chat_backend_integration_example.py  schemas.py
mission2/code/doughnuts_order_assistant/robot_controller/: donut_robot_adapter.py  vla_controller_rtc.py  worker.py  worker_cli.py  worker_main.py
mission2/code/doughnuts_order_assistant/services/: __init__.py  orders.py
mission2/code/doughnuts_order_assistant/state_controller/: __init__.py  events.py  machine.py  states.py
mission2/code/doughnuts_order_chatbot/: README.md  index.html  package-lock.json  package.json  vite.config.ts
mission2/code/doughnuts_order_chatbot/src/: App.css  App.tsx  index.css  vite-env.d.ts
mission2/code/doughnuts_order_chatbot/src/components/: CompleteIcon.css  CompleteIcon.tsx  DonutIcon.css  DonutIcon.tsx  Logo.css  Logo.tsx  RobotIcon.css  RobotIcon.tsx
mission2/code/src/doughnuts_order_assistant/robot_controller/: vla_controller_rtc.py
