[project]
name = "doughnuts-order-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "lerobot[feetech]>=0.4.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "lerobot-robot-bi-so101-follower>=0.1.1",
    "num2words>=0.5.14",
    "evdev>=1.7.1",
    "transformers>=4.57.3",
]

[project.scripts]
worker = "robot_controller.worker_cli:main"
